Set owner id and owner name to schedules
