# swagger/v1/swagger.yaml
@@ -278,6 +278,13 @@ components:
           type: string
         room_id:
           type: integer
+        owner_id:
+          type: string
+          format: uuid
+          readOnly: true
+        owner_name:
+          type: string
+          readOnly: true
         started_at:
           type: string
           format: date-time
